# realtime-stt-gui

./: LICENSE  README.md  cli.mov  gui.mov  main.py  pyproject.toml  setup.py
scripts/: package_app.sh
