[project]
name = "realtime-stt-gui"
version = "0.1.0"
description = "Realtime microphone transcription with GUI and CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "websocket-client",
  "pyaudio"
]

[project.optional-dependencies]
packaging = [
  "py2app",
  "pyinstaller"
]
